# msc

./: .gitignore  README.md  articles.json  requirements.txt  test.py
codes/pipeline-project/: Makefile  README.md  pyproject.toml  requirements.txt
codes/pipeline-project/.viz/: kedro_pipeline_events.json  stats.json
codes/pipeline-project/conf/base/: catalog.yml  mlflow.yml  parameters.yml
codes/pipeline-project/data/08_reporting/: report_summary.md
codes/pipeline-project/data/09_tracking/: params_holt_winters.json  params_naive.json  params_prophet.json  params_sarimax.json  params_xgb.json
codes/pipeline-project/src/kedro_starter/: pipeline_registry.py  settings.py
codes/pipeline-project/tests/: test_nodes.py
simulation/: README.md  generate_maps.py  generate_maps_full.py  generate_maps_nacional.py  pyproject.toml  regen_seg_plot.py  requirements.txt
simulation/.viz/: kedro_pipeline_events.json  stats.json
simulation/conf/base/: catalog.yml  logging.yml
simulation/conf/base/parameters/: data_cleaning.yml  data_ingestion.yml  demand_profiling.yml  forecasting.yml  policy_selection.yml  reporting.yml  simulation.yml
simulation/data/04_feature/: walkforward_splits.pkl
simulation/data/06_models/: policy_selector_model.pkl  scaled_params.pkl
simulation/data/08_reporting/: comparison_plots.pkl  demand_plots.pkl  dissertation_report.md  dissertation_report.pkl  final_results_validation.md  friedman_results.pkl  latex_tables.pkl  map_plots.pkl
simulation/src/reporting/: cti_adjusted_analysis.py  presentation_visuals.py  profile_policy_analysis.py  strategy_cost_comparison.py
simulation/src/simulation/: pipeline_registry.py  settings.py
(+752 files in other folders)
